personol detail aaded

--- a/IT_Home.html
+++ b/IT_Home.html
@@ -90,12 +90,13 @@
         quo quas autem facilis molestiae eos minus at soluta vero! Necessitatibus, porro inventore! Cumque a optio facere
         obcaecati.
 
+
     </section>
 </body>
 <script type="text/javascript">
    function logout(){
         // document.getElementsByClassName("btnlogout").value;
-        alert("Are you sure ..?");   
+        alert("Are you sure you want..?");   
     }
     // function login()
     // {
